examples/jitsi/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-meet
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: web
  annotations:
    kubernetes.io/ingress.class:  "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: jitsi-secret
      hosts:
      - 34.118.96.93.nip.io # TODO: Change it
  rules:
    - host: 34.118.96.93.nip.io # TODO: Change it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-meet
                port:
                  number: 80
